third section done

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 </body>
 
+<!-- start  first sendtion -->
 <section class="header-section">
     <br>
     <div>
@@ -30,5 +31,126 @@
 
 
 </section>
+
+<!-- end  first sendtion -->
+
+<!-- start  second sendtion -->
+<section class="second">
+
+    <div>
+
+        <h1>Donate Today</h1>
+
+        <p>A donation may take various forms, including money, alms, services,
+            or <br>goods as clothing, toys,
+            food.</p>
+
+        <div class="main">
+
+            <div>
+                <h3>100tk</h3>
+            </div>
+
+            <div id="border-second">
+                <h3>200tk</h3>
+            </div>
+
+            <div>
+                <h3>500tk</h3>
+            </div>
+            <div>
+                <h3>1000tk</h3>
+            </div>
+
+            <div>
+                <h3>5000tk</h3>
+            </div>
+
+        </div>
+
+
+        <div>
+
+            <input id="input-felid" type="number" placeholder="Other Amount (Taka)
+    ">
+        </div>
+        <br>
+        <br>
+
+        <div>
+            <a class="text-btn" href="" target="_blank"> Donate Now </a>
+        </div>
+
+    </div>
+
+</section>
+<!-- edn second sendtion -->
+
+<!-- start third sendtion -->
+
+<section class="third">
+
+    <div>
+
+        <h1>Our Donate Plan</h1>
+
+        <p>A donation may take various forms, including money, alms, services,
+            or <br>goods as clothing, toys,
+            food.</p>
+
+        <div class="parrent">
+
+            <div class="tri-width" id="tri-first">
+
+                <img src="icons/food.png" alt="">
+
+                <h4>Food for a family</h4>
+                <p>Amet minim mollit non deserunt <br>
+                    ullamco est sit aliqua dolor do amet<br>
+                    sint. Velit officia consequat duis enim<br>
+                    velit mollit.</p>
+
+            </div>
+
+            <div class="tri-width" id="tri-second">
+
+                <img src="icons/shelter.png" alt="">
+
+                <h4>Shelter for a family</h4>
+                <p>Amet minim mollit non deserunt <br>
+                    ullamco est sit aliqua dolor do amet<br>
+                    sint. Velit officia consequat duis enim<br>
+                    velit mollit.</p>
+
+            </div>
+
+            <div class="tri-width" id="tri-third">
+
+                <img src="icons/Frame-1.png" alt="">
+
+                <h4>Education for a child</h4>
+                <p>Amet minim mollit non deserunt <br>
+                    ullamco est sit aliqua dolor do amet<br>
+                    sint. Velit officia consequat duis enim<br>
+                    velit mollit.</p>
+
+            </div>
+
+
+
+
+
+        </div>
+
+    </div>
+
+
+
+
+
+
+</section>
+
+<!-- End third sendtion -->
 
 </html>
