--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Poor People </title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -135,22 +140,114 @@
                     velit mollit.</p>
 
             </div>
-
-
-
-
-
         </div>
-
     </div>
 
+</section>
+
+<!-- End third sendtion -->
+
+<!-- start four section -->
+
+<section class="four">
 
 
+
+    <div class="half-area">
+
+        <h1>Their lives depend on <br> your donation</h1>
+        <p>I already learned the basic HTML d CSS. <br> learned the basic HTML d CSS I can build any simple I can <br>
+            even
+            teach my grandma how to
+            make simple website. .</p>
+
+        <br>
+        <a class="text-btn2" href="">How to contribute ?</a>
+    </div>
+
+    <div class="half-area" id="img-fixed">
+        <img src="images/donation10.jpg" alt="">
+    </div>
 
 
 
 </section>
 
-<!-- End third sendtion -->
+
+
+
+
+
+<!-- End four section -->
+
+<section class="four">
+
+    <div class="half-area" id="img-fixed">
+        <img src="images/donation5.jpg" alt="">
+    </div>
+
+    <div class="half-area" id="fixed-margin">
+
+        <h1>They need us<br> to suvive </h1>
+        <p>I already learned the basic HTML d CSS. learned the basic <br>HTML d CSS I can build any simple I can <br>
+            even
+            teach my grandma how to
+            make simple website. .</p>
+
+        <p>I already learned the basic HTML d CSS. learned the basic <br>HTML d CSS I can build any simple I can <br>
+            even.
+        </p>
+
+        <br>
+        <a class="text-btn2" href="">How to contribute ?</a><br>
+    </div>
+
+
+</section>
+
+<section class="six">
+
+    <div>
+        <h1>Get My Updates</h1>
+
+        <p>A donation may take various forms, including money, alms, services,
+            or <br>goods as clothing, toys,
+            food.</p>
+    </div>
+
+
+    <div class="area-two">
+
+
+
+        <div class="input-boxes">
+
+            <input type="email" placeholder="Email">
+        </div>
+
+        <div class="btn">
+            <a href=""> Subscribe</a>
+
+        </div>
+
+    </div>
+</section>
+
+<footer>
+
+    <div>
+
+        <h2 id="fnt-style">Be Humble</h2>
+        <p>I’m gonna do it</p>
+
+    </div>
+
+
+
+</footer>
+
+
+
+
 
 </html>
