--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@
 
 <!-- End four section -->
 
+<!-- five section use four  -->
+
 <section class="four">
 
     <div class="half-area" id="img-fixed">
@@ -204,6 +206,12 @@
 
 
 </section>
+
+
+<!-- five section use four  -->
+
+
+<!-- start six section -->
 
 <section class="six">
 
@@ -233,6 +241,10 @@
     </div>
 </section>
 
+<!-- End  six section -->
+
+
+<!-- footer start -->
 <footer>
 
     <div>
@@ -243,8 +255,9 @@
     </div>
 
 
-
 </footer>
+
+<!-- footer End -->
 
 
 
